--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Rock-Paper-Scissors</title>
-    <script src="script.js"></script>
-  </head>
+    <script src="script.js" defer></script>
+</head>
 
-  <body>
+<body>
+<div class="score-container">
+    <div id="player-wins">Player Wins = 0</div>
+    <div id="computer-wins">Computer Wins = 0</div>
 
-  </body>
+</div>
+
+<div class="button-container">
+    <button id="rock">Rock!</button>
+    <button id="paper">Paper!</button>
+    <button id="scissors">Scissors!</button>
+</div>
+
+<div id="results"></div>
+
+</body>
 </html>
