--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <title>Rock-Paper-Scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div class="score-container">
-    <div id="player-wins">Player Wins = 0</div>
-    <div id="computer-wins">Computer Wins = 0</div>
+<div class="main-container">
+    <div class="header">Rock Paper Scissors!</div>
+    <div class="score-container">
+        <div id="player-wins">Player Wins = 0</div>
+        <div id="computer-wins">Computer Wins = 0</div>
 
+    </div>
+
+    <div class="button-container">
+        <button id="rock">Rock!</button>
+        <button id="paper">Paper!</button>
+        <button id="scissors">Scissors!</button>
+    </div>
+
+    <div class="results-container">
+        <div id="results"></div>
+    </div>
 </div>
-
-<div class="button-container">
-    <button id="rock">Rock!</button>
-    <button id="paper">Paper!</button>
-    <button id="scissors">Scissors!</button>
-</div>
-
-<div id="results"></div>
-
 </body>
 </html>
