--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 
 <body>
+<div class="header-container">
+    <div class="header">Rock Paper Scissors!</div>
+    <div class="score-container">
+        <div id="player-wins">Player Wins = 0</div>
+        <div id="computer-wins">Computer Wins = 0</div>
 
-<div class="header">Rock Paper Scissors!</div>
-<div class="score-container">
-    <div id="player-wins">Player Wins = 0</div>
-    <div id="computer-wins">Computer Wins = 0</div>
-
-</div>
-
-<div class="button-container">
-    <button id="rock">Rock!</button>
-    <button id="paper">Paper!</button>
-    <button id="scissors">Scissors!</button>
+    </div>
 </div>
 
 <div class="results-container">
     <div id="results"></div>
 </div>
+
+<div class="button-container">
+    <button id="rock"></button>
+    <button id="paper"></button>
+    <button id="scissors"></button>
+</div>
+
 
 </body>
 </html>
