--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
     <button id="scissors"></button>
 </div>
 
+<div class="footer">
+    <div id="reference-text">Credit Links!</div>
+    <ul id="references">
 
+        <li><a href="https://www.flaticon.com/free-icons/scissors" title="scissors icons">Scissors icons created by
+            Freepik - Flaticon</a>
+        </li>
+        <li><a href="https://www.flaticon.com/free-icons/paper" title="paper icons">Paper icons created by Freepik -
+            Flaticon</a>
+        </li>
+        <li><a href="https://www.flaticon.com/free-icons/rock" title="rock icons">Rock icons created by Freepik -
+            Flaticon</a></li>
+    </ul>
+</div>
 </body>
 </html>
